2010-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.ch: Remove unnecessary change.
	* ppltotf.ch: Adapt to bug fix now done in ../pltotf.ch,
	originally by Ken Nakano <nakano@nextsolution.co.jp>.
	* kanji.h (inputline2): Moved from ../../ptexenc/ptexenc.h to here.

	* pbibtex.ch: Correct handling of buffer_overflow.  From Akira.
	* ptex.defines (inputline3): Removed.

	* am/ptex.am: No synctex.  No reason to create ptexdir/lib/.

2010-04-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.test, ppltotf.test, ptftopl.test (new): Shell scripts
	for basic 'make check' tests.
	* am/ptex.am: Add these tests.

	* pbibtex.ch: Adapt to change (bug fix) in ../bibtex.ch.
	Remove kanji fix of workaround from ../bibtex.ch for breaking
	long lines in module 324; all that is gone with bibtex-0.99d.

2010-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ppltotf.ch: Rename PTEX_PLTOTF_HELP => PPLTOTF_HELP.
	* ptftopl.ch: Rename PTEX_TFTOPL_HELP => PTFTOPL_HELP.
	* ptexhelp.h (removed): Help text now in ../help.h.
	* kanji.h: Remove #include "ptexhelp.h" and redefinition of
	TEXMFPOOLNAME and TEXMFENGINENAME.

	* ptexextra.in (PTEXHELP): Moved to ../texmfmp-help.h from here.

	* ptex.defines (inputline3): Moved from pbibtex.defines to here.
	(PTEXTFTOPLHELP, PTEXPLTOTFHELP, PDVITYPEHELP): Removed.
	* pbibtex.defines (removed): Using ptex.defines.
	* ptex-include.ch (removed): Now done in ../texmfmp.h.

	* am/ptex.am: Adjust and replace lib/lib.a by ../lib/libp.a.

2010-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdvitype.ch: New version, used on top of dvitype.ch.
	* ptftopl.ch, ptex-base.ch: Remove trailing whitespace.

	Avoid compiler warnings.
	* ptftopl.ch (organize): Slightly reformulate (uninitialized).
	* ppltotf.ch: Handle Pascal Web's char as in ../pltotf.ch.
	(todig): Change param type to byte. Don't return uninitialized.

2010-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pbibtex.ch, ptex-base.ch, ptftopl.ch: Use conststringcast, not