@@ -1,3 +1,7 @@
+2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* fixwrites.c (main): Recognize 'conststringcast...' as string.
+
 2010-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* coerce.h: Remove luaTeX specific code.
