@@ -1,3 +1,12 @@
+2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* pbibtex.ch, kanji.h: Use input_line2() with five arguments
+	for correct handling of buffer_overflow.
+
+	* pbibtex-longline-test.pl, pbibtex-openout-test.pl,
+	pbibtex-mem.test, pbibtex.test: New tests.
+	* am/ptex.am: Add them.
+
 2010-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* pdvitype.ch: Remove unnecessary change.
